--- a/targets/build.ini
+++ b/targets/build.ini
@@ -12,7 +12,6 @@ RTLinux = true
 ###
 [Linux]
 repository = altera-linux
-branch = develop
 [Linux-parallelbuild]
 defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- socfpga_defconfig
 kernel = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- LOADADDR=0x8000 uImage
@@ -25,7 +24,6 @@ description = the Linux kernel (use default configuration).
 ###
 [U-Boot]
 repository = altera-uboot
-branch = develop
 [U-Boot-parallelbuild]
 defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- socfpga_cyclone5_mercury_sa1_defconfig
 elf = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi-
@@ -37,7 +35,6 @@ description = the U-Boot bootloader.
 ###
 [BusyBox]
 repository = busybox-rootfs
-branch = develop
 [BusyBox-parallelbuild]
 defconfig = make enclustra_altera_defconfig
 rootfs = make
@@ -47,7 +44,7 @@ description = the BusyBox rootfs (use default configuration).
 configs/busybox_dotconfig = .config
 [RTLinux]
 repository = altera-linux-rt
-branch = rt-develop
+branch = rt
 [RTLinux-parallelbuild]
 defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- socfpga_defconfig
 kernel = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- LOADADDR=0x8000 uImage
