--- a/enclustra.ini
+++ b/enclustra.ini
@@ -1,6 +1,7 @@
 [general]
 manifest_repository = https://github.com/enclustra-bsp/bsp-altera-container.git
 nthreads = 9
+history_path = history-altera
 # list of toolchains, 'local' means that toolchain is already installed in the system,
 # while 'remote' will be downloaded
 [toolchains]
