Update target binaries references
Changes required due to reorganization of the download server.

--- a/targets/Mercury_SA1/Mercury_PE1/NET/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/NET/build.ini
@@ -6,7 +6,7 @@ uboot.scr = additional_bootscripts/uboot.scr
 rootfs.tar = output/images/rootfs.tar
 [boot_files_c6_i7-copyfiles]
 preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
-fpga.rbf = sa1.rbf
+fpga.rbf = refdes.rbf
 [BusyBox-parallelbuild]
 defconfig = make enclustra_altera_nodhcp_defconfig
 rootfs = make
