--- a/targets/Mercury_SA1/Mercury_PE1/QSPI_RAMDISK/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/QSPI_RAMDISK/build.ini
@@ -6,4 +6,4 @@ uboot.scr = additional_bootscripts/uboot.scr
 uramdisk = output/images/rootfs.cpio.uboot
 [boot_files_c6_i7-copyfiles]
 preloader-mkpimage.bin = preloader-mkpimage-qspi.bin
-fpga.rbf.img = sa1.rbf.img
+fpga.rbf.img = refdes.rbf.img
