--- a/targets/Mercury_SA2/Mercury_PE1/NET/build.ini
+++ b/targets/Mercury_SA2/Mercury_PE1/NET/build.ini
@@ -4,9 +4,9 @@ bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot netwo
 uboot.scr = additional_bootscripts/uboot.scr
 [BusyBox-copyfiles]
 rootfs.tar = output/images/rootfs.tar
-[boot_files_c6_i7-copyfiles]
+[boot_files_d6_i7-copyfiles]
 preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
-fpga.rbf = sa1.rbf
+fpga.rbf = refdes.rbf
 [BusyBox-parallelbuild]
 defconfig = make enclustra_altera_nodhcp_defconfig
 rootfs = make
