--- a/targets/Mercury_SA2/Mercury_PE1/build.ini
+++ b/targets/Mercury_SA2/Mercury_PE1/build.ini
@@ -1,7 +1,6 @@
 [binaries]
-boot_files_c6_i7 = true
-[boot_files_c6_i7]
+boot_files_d6_i7 = true
+[boot_files_d6_i7]
 unpack = true
-url = http://www.enclustra.com/binaries/enclustra-bsp/mercury_sa2_pe1_c6_i7.zip
-description = Altera SocFPGA C6, speed grade I7
-
+url = http://www.enclustra.com/binaries/enclustra-bsp/refdes/mercury_sa2_pe1_d6_i7.zip
+description = Altera SocFPGA D6, speed grade I7
