--- a/targets/Mercury_SA1/Mercury_PE1/USB/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/USB/build.ini
@@ -6,4 +6,4 @@ uboot.scr = additional_bootscripts/uboot.scr
 rootfs.tar = output/images/rootfs.tar
 [boot_files_c6_i7-copyfiles]
 preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
-fpga.rbf = sa1.rbf
+fpga.rbf = refdes.rbf
