--- a/targets/Mercury_SA2/Mercury_PE1/QSPI_RAMDISK/build.ini
+++ b/targets/Mercury_SA2/Mercury_PE1/QSPI_RAMDISK/build.ini
@@ -4,6 +4,6 @@ bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot qspi 
 uboot.scr = additional_bootscripts/uboot.scr
 [BusyBox-copyfiles]
 uramdisk = output/images/rootfs.cpio.uboot
-[boot_files_c6_i7-copyfiles]
+[boot_files_d6_i7-copyfiles]
 preloader-mkpimage.bin = preloader-mkpimage-qspi.bin
-fpga.rbf.img = sa1.rbf.img
+fpga.rbf.img = refdes.rbf.img
