Add Mercury SA1/PE1 C6 C8 target

--- a/targets/Mercury_SA1/Mercury_PE1/MMC/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/MMC/build.ini
@@ -7,3 +7,6 @@ rootfs.tar = output/images/rootfs.tar
 [boot_files_c6_i7-copyfiles]
 preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
 fpga.rbf = refdes.rbf
+[boot_files_c6_c8-copyfiles]
+preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
+fpga.rbf = refdes.rbf
