--- a/targets/Mercury_SA1/Mercury_PE1/NET/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/NET/build.ini
@@ -7,6 +7,9 @@ rootfs.tar = output/images/rootfs.tar
 [boot_files_c6_i7-copyfiles]
 preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
 fpga.rbf = refdes.rbf
+[boot_files_c6_c8-copyfiles]
+preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
+fpga.rbf = refdes.rbf
 [BusyBox-parallelbuild]
 defconfig = make enclustra_altera_nodhcp_defconfig
 rootfs = make
