--- a/targets/Mercury_SA1/Mercury_PE1/QSPI_RAMDISK/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/QSPI_RAMDISK/build.ini
@@ -7,3 +7,6 @@ uramdisk = output/images/rootfs.cpio.uboot
 [boot_files_c6_i7-copyfiles]
 preloader-mkpimage.bin = preloader-mkpimage-qspi.bin
 fpga.rbf.img = refdes.rbf.img
+[boot_files_c6_c8-copyfiles]
+preloader-mkpimage.bin = preloader-mkpimage-qspi.bin
+fpga.rbf.img = refdes.rbf.img
