Use latest develop branches for Linux/UBoot

--- a/targets/build.ini
+++ b/targets/build.ini
@@ -12,7 +12,7 @@ RTLinux = true
 ###
 [Linux]
 repository = altera-linux
-branch = develop
+branch = develop-kernel-4-x
 [Linux-parallelbuild]
 defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- socfpga_defconfig
 kernel = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- LOADADDR=0x8000 uImage
@@ -25,7 +25,7 @@ description = the Linux kernel (use default configuration).
 ###
 [U-Boot]
 repository = altera-uboot
-branch = develop
+branch = develop-uboot-2015.10
 [U-Boot-parallelbuild]
 defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- socfpga_cyclone5_mercury_sa1_defconfig
 elf = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi-
