targets: aa1: copy uramdisk to output

--- a/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
@@ -1,5 +1,6 @@
 [BusyBox-copyfiles]
 rootfs.tar = output/images/rootfs.tar
+uramdisk = output/images/rootfs.cpio.uboot
 [binaries]
 boot_files_aa1_mmc = true
 [boot_files_aa1_mmc]
