targets: aa1: add support for ramdisk boot
Add additional binary file to AA1 MMC target that contains pre-compiled
U-Boot configured to load and boot to ramdisk image.

--- a/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
@@ -9,4 +9,5 @@ url = http://www.enclustra.com/binaries/enclustra-bsp/refdes/mercury_aa1_mmc.zip
 description = Altera SocFPGA MMC boot
 [boot_files_aa1_mmc-copyfiles]
 uboot-mkpimage.bin = uboot_w_dtb-mkpimage.bin
+uboot-mkpimage-ramdisk.bin = uboot_w_dtb-mkpimage-ramdisk.bin
 fpga.rbf = refdes.rbf
