targets: rename busybox to buildroot
Use name "Buildroot" instead of "BusyBox" for all targets.

--- a/targets/Mercury_SA1/Mercury_PE1/QSPI/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/QSPI/build.ini
@@ -2,7 +2,7 @@
 bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot qspi start script" -d additional_bootscripts/qspiboot additional_bootscripts/uboot.scr
 [U-Boot-copyfiles]
 uboot.scr = additional_bootscripts/uboot.scr
-[BusyBox-copyfiles]
+[Buildroot-copyfiles]
 rootfs.jffs2 = output/images/rootfs.jffs2
 [boot_files_c6_i7-copyfiles]
 preloader-mkpimage.bin = preloader-mkpimage-qspi.bin
