--- a/targets/build.ini
+++ b/targets/build.ini
@@ -6,7 +6,7 @@ dtc = device-tree-compiler
 # list of repositories, value indicates if it is active or not
 Linux = true
 U-Boot= true
-BusyBox = true
+Buildroot = true
 RTLinux = true
 # targets description
 ###
@@ -33,15 +33,15 @@ configs/uboot_dotconfig = .config
 [U-Boot-help]
 description = the U-Boot bootloader.
 ###
-[BusyBox]
-repository = busybox-rootfs
-[BusyBox-parallelbuild]
+[Buildroot]
+repository = buildroot-rootfs
+[Buildroot-parallelbuild]
 defconfig = make enclustra_altera_defconfig
 rootfs = make
-[BusyBox-help]
-description = the BusyBox rootfs (use default configuration).
-[BusyBox-copyfiles]
-configs/busybox_dotconfig = .config
+[Buildroot-help]
+description = the Buildroot rootfs (use default configuration).
+[Buildroot-copyfiles]
+configs/buildroot_dotconfig = .config
 [RTLinux]
 repository = altera-linux-rt
 branch = rt
@@ -58,4 +58,4 @@ description = the Linux kernel (realtime configuration).
 Linux = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- distclean
 RTLinux = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- clean
 U-Boot = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- distclean
-BusyBox = make distclean
+Buildroot = make distclean
