--- a/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
@@ -1,4 +1,4 @@
-[BusyBox-copyfiles]
+[Buildroot-copyfiles]
 rootfs.tar = output/images/rootfs.tar
 uramdisk = output/images/rootfs.cpio.uboot
 [binaries]
