--- a/targets/Mercury_SA1/Mercury_PE1/NET/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/NET/build.ini
@@ -2,7 +2,7 @@
 bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot network start script" -d additional_bootscripts/netboot additional_bootscripts/uboot.scr
 [U-Boot-copyfiles]
 uboot.scr = additional_bootscripts/uboot.scr
-[BusyBox-copyfiles]
+[Buildroot-copyfiles]
 rootfs.tar = output/images/rootfs.tar
 [boot_files_c6_i7-copyfiles]
 preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
@@ -10,6 +10,6 @@ fpga.rbf = refdes.rbf
 [boot_files_c6_c8-copyfiles]
 preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
 fpga.rbf = refdes.rbf
-[BusyBox-parallelbuild]
+[Buildroot-parallelbuild]
 defconfig = make enclustra_altera_nodhcp_defconfig
 rootfs = make
