--- a/targets/Mercury_SA1/Mercury_PE1/QSPI_RAMDISK/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/QSPI_RAMDISK/build.ini
@@ -2,7 +2,7 @@
 bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot qspi start script" -d additional_bootscripts/qspiramdiskboot additional_bootscripts/uboot.scr
 [U-Boot-copyfiles]
 uboot.scr = additional_bootscripts/uboot.scr
-[BusyBox-copyfiles]
+[Buildroot-copyfiles]
 uramdisk = output/images/rootfs.cpio.uboot
 [boot_files_c6_i7-copyfiles]
 preloader-mkpimage.bin = preloader-mkpimage-qspi.bin
