--- a/targets/Mercury_SA2/Mercury_PE1/MMC/build.ini
+++ b/targets/Mercury_SA2/Mercury_PE1/MMC/build.ini
@@ -2,7 +2,7 @@
 bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d additional_bootscripts/mmcboot additional_bootscripts/uboot.scr
 [U-Boot-copyfiles]
 uboot.scr = additional_bootscripts/uboot.scr
-[BusyBox-copyfiles]
+[Buildroot-copyfiles]
 rootfs.tar = output/images/rootfs.tar
 [boot_files_d6_i7-copyfiles]
 preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
