targets: fix target descriptions
Remove the "default configuration" strings which are no longer relevant.

--- a/targets/build.ini
+++ b/targets/build.ini
@@ -20,7 +20,7 @@ dtb = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- dtbs
 uImage = arch/arm/boot/uImage
 configs/kernel_dotconfig = .config
 [Linux-help]
-description = the Linux kernel (use default configuration).
+description = the Linux kernel.
 ###
 [U-Boot]
 repository = altera-uboot
@@ -39,7 +39,7 @@ repository = buildroot-rootfs
 defconfig = make enclustra_altera_defconfig
 rootfs = make
 [Buildroot-help]
-description = the Buildroot rootfs (use default configuration).
+description = the Buildroot rootfs.
 [Buildroot-copyfiles]
 configs/buildroot_dotconfig = .config
 [RTLinux]
