--- a/targets/Mercury_SA1/Mercury_PE1/USB/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/USB/build.ini
@@ -5,8 +5,12 @@ uboot.scr = additional_bootscripts/uboot.scr
 [Buildroot-copyfiles]
 rootfs.tar = output/images/rootfs.tar
 [boot_files_c6_i7-copyfiles]
-preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
+preloader-mkpimage-sdcard.bin = preloader-mkpimage-sdcard.bin
+preloader-mkpimage-qspi.bin = preloader-mkpimage-qspi.bin
 fpga.rbf = refdes.rbf
+fpga.rbf.img = refdes.rbf.img
 [boot_files_c6_c8-copyfiles]
-preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
+preloader-mkpimage-sdcard.bin = preloader-mkpimage-sdcard.bin
+preloader-mkpimage-qspi.bin = preloader-mkpimage-qspi.bin
 fpga.rbf = refdes.rbf
+fpga.rbf.img = refdes.rbf.img
