--- a/targets/Mercury_SA2/Mercury_PE1/USB/build.ini
+++ b/targets/Mercury_SA2/Mercury_PE1/USB/build.ini
@@ -5,5 +5,7 @@ uboot.scr = additional_bootscripts/uboot.scr
 [Buildroot-copyfiles]
 rootfs.tar = output/images/rootfs.tar
 [boot_files_d6_i7-copyfiles]
-preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
+preloader-mkpimage-sdcard.bin = preloader-mkpimage-sdcard.bin
+preloader-mkpimage-qspi.bin = preloader-mkpimage-qspi.bin
 fpga.rbf = refdes.rbf
+fpga.rbf.img = refdes.rbf.img
