targets: config: add EBE version template to all download links
This introduces binaries versioning in EBE. This is important if we want
to keep previous releases (tags) working.

--- a/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
@@ -5,7 +5,7 @@ uramdisk = output/images/rootfs.cpio.uboot
 boot_files_aa1_mmc = true
 [boot_files_aa1_mmc]
 unpack = true
-url = http://www.enclustra.com/binaries/enclustra-bsp/refdes/mercury_aa1_mmc.zip
+url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_mmc.zip
 description = Altera SocFPGA MMC boot
 [boot_files_aa1_mmc-copyfiles]
 uboot-mkpimage.bin = uboot_w_dtb-mkpimage.bin
