--- a/enclustra.ini
+++ b/enclustra.ini
@@ -9,13 +9,13 @@ uboot-tools = remote
 device-tree-compiler = remote
 # every 'remote' toolchain needs configuration
 [arm-none-linux-gnueabi]
-server = http://www.enclustra.com/binaries/enclustra-bsp/arm-none-linux-gnueabi-static-i686.tar.bz2
+server = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/arm-none-linux-gnueabi-static-i686.tar.bz2
 path = arm-none-linux-gnueabi-static/bin
 [uboot-tools]
-server = http://www.enclustra.com/binaries/enclustra-bsp/uboot-tools-i686-static.tar.gz
+server = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/uboot-tools-i686-static.tar.gz
 path = uboot-tools-i686-static
 [device-tree-compiler]
-server = http://www.enclustra.com/binaries/enclustra-bsp/device-tree-compiler-i686-static.tar.gz
+server = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/device-tree-compiler-i686-static.tar.gz
 path = device-tree-compiler-i686-static
 [debug]
 debug-calls = true
