--- a/targets/build.ini
+++ b/targets/build.ini
@@ -16,6 +16,8 @@ repository = altera-linux
 defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- socfpga_defconfig
 kernel = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- LOADADDR=0x8000 uImage
 dtb = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- dtbs
+modules = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- modules
+modules_install = make INSTALL_MOD_PATH={ebe_overlays} ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- modules_install
 [Linux-copyfiles]
 uImage = arch/arm/boot/uImage
 configs/kernel_dotconfig = .config
@@ -37,7 +39,7 @@ description = the U-Boot bootloader.
 repository = buildroot-rootfs
 [Buildroot-parallelbuild]
 defconfig = make enclustra_altera_defconfig
-rootfs = make
+rootfs = make EBE_OVERLAYS={ebe_overlays}
 [Buildroot-help]
 description = the Buildroot rootfs.
 [Buildroot-copyfiles]
