targets: make sure buildroot is built last
We need that to properly use EBE_OVERLAYS.

--- a/targets/build.ini
+++ b/targets/build.ini
@@ -37,6 +37,7 @@ description = the U-Boot bootloader.
 ###
 [Buildroot]
 repository = buildroot-rootfs
+priority = 100
 [Buildroot-parallelbuild]
 defconfig = make enclustra_altera_defconfig
 rootfs = make EBE_OVERLAYS={ebe_overlays}
