targets: AA1: MMC: add U-Boot bootscripts
Use U-Boot boot scripts provided with AA1 binaries instead of having
multiple binaries with different boot command.

--- a/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
@@ -11,3 +11,5 @@ description = Altera SocFPGA MMC boot
 uboot-mkpimage.bin = uboot_w_dtb-mkpimage.bin
 uboot-mkpimage-ramdisk.bin = uboot_w_dtb-mkpimage-ramdisk.bin
 fpga.rbf = refdes.rbf
+uboot_ramdisk.scr = uboot_ramdisk.scr
+uboot.scr = uboot.scr
