Add script for qspi boot image generation
This commit adds create-image script to toolchains. It will be used for
QSPI full boot image generation.

--- a/enclustra.ini
+++ b/enclustra.ini
@@ -7,7 +7,11 @@ history_path = history-altera
 arm-none-linux-gnueabi = remote
 uboot-tools = remote
 device-tree-compiler = remote
+create-image = remote
 # every 'remote' toolchain needs configuration
+[create-image]
+server = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/create-image-scr.tar.gz
+path = create-image-scr
 [arm-none-linux-gnueabi]
 server = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/arm-none-linux-gnueabi-static-i686.tar.bz2
 path = arm-none-linux-gnueabi-static/bin
