--- a/targets/build.ini
+++ b/targets/build.ini
@@ -2,6 +2,7 @@
 arm = arm-none-linux-gnueabi
 uboot = uboot-tools
 dtc = device-tree-compiler
+create-image = create-image
 [targets]
 # list of repositories, value indicates if it is active or not
 Linux = true
