targets: add qspi full option to all qspi targets

--- a/targets/Mercury_AA1/Mercury_PE1/QSPI/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/QSPI/build.ini
@@ -12,3 +12,26 @@ uboot-mkpimage.bin = uboot_w_dtb-mkpimage.bin
 fpga.rbf.img = refdes.rbf.img
 uboot_ramdisk.scr = uboot_ramdisk.scr
 uboot.scr = uboot.scr
+boot_full.conf = boot_full.conf
+boot_full_ramdisk.conf = boot_full_ramdisk.conf
+[bootimage]
+bootimage-full = create-image boot_full.conf boot_full.bin
+bootimage-full-ramdisk = create-image boot_full_ramdisk.conf boot_full_ramdisk.bin
+[bootimage-full-required-files]
+uboot-mkpimage.bin = true
+fpga.rbf.img = true
+uboot.scr = true
+uImage = true
+devicetree.dtb = true
+rootfs.jffs2 = true
+[bootimage-full-result-files]
+boot_full.bin = true
+[bootimage-full-ramdisk-required-files]
+uboot-mkpimage.bin = true
+fpga.rbf.img = true
+uboot_ramdisk.scr = true
+uImage = true
+devicetree.dtb = true
+uramdisk = true
+[bootimage-full-ramdisk-result-files]
+boot_full_ramdisk.bin = true
