--- a/targets/build.ini
+++ b/targets/build.ini
@@ -63,3 +63,6 @@ Linux = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- distclean
 RTLinux = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- clean
 U-Boot = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- distclean
 Buildroot = make distclean
+[binaries-non-modifiable]
+boot_full.conf = true
+boot_full_ramdisk.conf = true
