--- a/targets/Mars_MA3/build.ini
+++ b/targets/Mars_MA3/build.ini
@@ -1,4 +1,6 @@
 [Linux-copyfiles]
 devicetree.dtb = arch/arm/boot/dts/socfpga_cyclone5_mars_ma3.dtb
+[U-Boot-copyfiles]
+uEnv.txt = board/enclustra/uEnv.txt
 [U-Boot-parallelbuild]
 defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- socfpga_cyclone5_mars_ma3_defconfig
