targets: aa1: set proper device name for Arria 10

--- a/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/MMC/build.ini
@@ -6,7 +6,7 @@ boot_files_aa1_mmc = true
 [boot_files_aa1_mmc]
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_mmc.zip
-description = Altera SocFPGA MMC boot
+description = Altera Arria 10 S048, speed grade I2
 [boot_files_aa1_mmc-copyfiles]
 uboot-mkpimage.bin = uboot_w_dtb-mkpimage.bin
 fpga.rbf = refdes.rbf
