--- a/targets/Mercury_AA1/Mercury_PE1/QSPI/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/QSPI/build.ini
@@ -6,7 +6,7 @@ boot_files_aa1_qspi = true
 [boot_files_aa1_qspi]
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_qspi.zip
-description = Altera SocFPGA QSPI boot
+description = Altera Arria 10 S048, speed grade I2
 [boot_files_aa1_qspi-copyfiles]
 uboot-mkpimage.bin = uboot_w_dtb-mkpimage.bin
 fpga.rbf.img = refdes.rbf.img
