targets: mercury aa1: unify binaries for Mercury AA1 rev1
This commit unifies binaries for Mercury AA1 (revision 1) to make
further expanding of AA1 target easier. This approach of handling
binaries is closer to the one we use for SA1/SA2.

--- a/targets/Mercury_AA1/Mercury_PE1/Rev1/QSPI/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/Rev1/QSPI/build.ini
@@ -1,17 +1,11 @@
 [Buildroot-copyfiles]
 rootfs.jffs2 = output/images/rootfs.jffs2
 uramdisk = output/images/rootfs.cpio.uboot
-[binaries]
-boot_files_aa1_qspi = true
-[boot_files_aa1_qspi]
-unpack = true
-url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_qspi.zip
-description = Altera Arria 10 S048, speed grade I2
-[boot_files_aa1_qspi-copyfiles]
-uboot-mkpimage.bin = uboot_w_dtb-mkpimage.bin
+[boot_files_sx480_i2_r1-copyfiles]
+uboot-mkpimage.bin = uboot_w_dtb-mkpimage-qspi.bin
 fpga.rbf.img = refdes.rbf.img
-uboot_ramdisk.scr = uboot_ramdisk.scr
-uboot.scr = uboot.scr
+uboot_ramdisk.scr = qspi_uboot_ramdisk.scr
+uboot.scr = qspi_uboot.scr
 boot_full.conf = boot_full.conf
 boot_full_ramdisk.conf = boot_full_ramdisk.conf
 [bootimage]
