targets: mercury aa1: add support for newer AA1 revisions
Add support for Mercury AA1 revision 2 and later. Since now all new
revisions of the Mercury AA1 modules will use UART1 instead of UART0.

--- a/targets/Mercury_AA1/Mercury_PE1/Rev1/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/Rev1/build.ini
@@ -1,3 +1,5 @@
+[Linux-copyfiles]
+devicetree.dtb = arch/arm/boot/dts/socfpga_arria10_mercury_aa1_rev1.dtb
 [binaries]
 boot_files_sx480_i2_r1 = true
 [boot_files_sx480_i2_r1]
