targets: mercury aa1: use different devicetree for the QSPI target
It's necessary to use different devicetrees for QSPI target as MMC and
QSPI buses are exclusive with each other.

--- a/targets/Mercury_AA1/Mercury_PE1/Rev2/QSPI/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/Rev2/QSPI/build.ini
@@ -1,3 +1,5 @@
+[Linux-copyfiles]
+devicetree.dtb = arch/arm/boot/dts/socfpga_arria10_mercury_aa1_qspi.dtb
 [Buildroot-copyfiles]
 rootfs.jffs2 = output/images/rootfs.jffs2
 uramdisk = output/images/rootfs.cpio.uboot
