targets: mercury aa1: rename the U-Boot binary
Rename uboot-mkpimage.bin to preloader-mkpimage.bin to make the Altera
targets more unified. The name of the U-Boot binary doesn't matter at
all as it's stored as a binary blob on the boot device.

--- a/targets/Mercury_AA1/Mercury_PE1/Rev1/EMMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/Rev1/EMMC/build.ini
@@ -2,7 +2,7 @@
 rootfs.tar = output/images/rootfs.tar
 uramdisk = output/images/rootfs.cpio.uboot
 [boot_files_sx480_i2_r1-copyfiles]
-uboot-mkpimage.bin = uboot_w_dtb-mkpimage-emmc.bin
+preloader-mkpimage.bin = uboot_w_dtb-mkpimage-emmc.bin
 fpga.rbf = refdes_emmc.rbf
 uboot_ramdisk.scr = emmc_uboot_ramdisk.scr
 uboot.scr = emmc_uboot.scr
