--- a/targets/Mercury_AA1/Mercury_PE1/Rev2/QSPI/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/Rev2/QSPI/build.ini
@@ -4,14 +4,14 @@ devicetree.dtb = arch/arm/boot/dts/socfpga_arria10_mercury_aa1_qspi.dtb
 rootfs.jffs2 = output/images/rootfs.jffs2
 uramdisk = output/images/rootfs.cpio.uboot
 [boot_files_sx480_i2-copyfiles]
-uboot-mkpimage.bin = uboot_w_dtb-mkpimage-qspi.bin
+preloader-mkpimage.bin = uboot_w_dtb-mkpimage-qspi.bin
 fpga.rbf.img = refdes.rbf.img
 uboot_ramdisk.scr = qspi_uboot_ramdisk.scr
 uboot.scr = qspi_uboot.scr
 boot_full.conf = boot_full.conf
 boot_full_ramdisk.conf = boot_full_ramdisk.conf
 [boot_files_sx270_i2-copyfiles]
-uboot-mkpimage.bin = uboot_w_dtb-mkpimage-qspi.bin
+preloader-mkpimage.bin = uboot_w_dtb-mkpimage-qspi.bin
 fpga.rbf.img = refdes.rbf.img
 uboot_ramdisk.scr = qspi_uboot_ramdisk.scr
 uboot.scr = qspi_uboot.scr
@@ -21,7 +21,7 @@ boot_full_ramdisk.conf = boot_full_ramdisk.conf
 bootimage-full = create-image boot_full.conf boot_full.bin
 bootimage-full-ramdisk = create-image boot_full_ramdisk.conf boot_full_ramdisk.bin
 [bootimage-full-required-files]
-uboot-mkpimage.bin = true
+preloader-mkpimage.bin = true
 fpga.rbf.img = true
 uboot.scr = true
 uImage = true
@@ -30,7 +30,7 @@ rootfs.jffs2 = true
 [bootimage-full-result-files]
 boot_full.bin = true
 [bootimage-full-ramdisk-required-files]
-uboot-mkpimage.bin = true
+preloader-mkpimage.bin = true
 fpga.rbf.img = true
 uboot_ramdisk.scr = true
 uImage = true
