--- a/targets/Mercury_AA1/Mercury_PE1/Rev1/MMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/Rev1/MMC/build.ini
@@ -2,7 +2,7 @@
 rootfs.tar = output/images/rootfs.tar
 uramdisk = output/images/rootfs.cpio.uboot
 [boot_files_sx480_i2_r1-copyfiles]
-uboot-mkpimage.bin = uboot_w_dtb-mkpimage-mmc.bin
+preloader-mkpimage.bin = uboot_w_dtb-mkpimage-mmc.bin
 fpga.rbf = refdes.rbf
 uboot_ramdisk.scr = mmc_uboot_ramdisk.scr
 uboot.scr = mmc_uboot.scr
