--- a/targets/Mercury_AA1/Mercury_PE1/Rev2/EMMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/Rev2/EMMC/build.ini
@@ -2,12 +2,12 @@
 rootfs.tar = output/images/rootfs.tar
 uramdisk = output/images/rootfs.cpio.uboot
 [boot_files_sx480_i2-copyfiles]
-uboot-mkpimage.bin = uboot_w_dtb-mkpimage-emmc.bin
+preloader-mkpimage.bin = uboot_w_dtb-mkpimage-emmc.bin
 fpga.rbf = refdes_emmc.rbf
 uboot_ramdisk.scr = emmc_uboot_ramdisk.scr
 uboot.scr = emmc_uboot.scr
 [boot_files_sx270_i2-copyfiles]
-uboot-mkpimage.bin = uboot_w_dtb-mkpimage-emmc.bin
+preloader-mkpimage.bin = uboot_w_dtb-mkpimage-emmc.bin
 fpga.rbf = refdes_emmc.rbf
 uboot_ramdisk.scr = emmc_uboot_ramdisk.scr
 uboot.scr = emmc_uboot.scr
