targets: mercury aa1: qspi: generate fw_env.config
Adds prebuild script for generating fw_env.config in QSPI rootfs.

--- a/targets/Mercury_AA1/Mercury_PE1/Rev1/QSPI/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/Rev1/QSPI/build.ini
@@ -1,3 +1,5 @@
+[Buildroot-scripts]
+prebuild = ../../qspi_prebuild.sh "{ebe_overlays}"
 [Buildroot-copyfiles]
 rootfs.jffs2 = output/images/rootfs.jffs2
 uramdisk = output/images/rootfs.cpio.uboot
