--- a/targets/Mercury_AA1/Mercury_PE1/Rev2/QSPI/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/Rev2/QSPI/build.ini
@@ -1,3 +1,5 @@
+[Buildroot-scripts]
+prebuild = ../../qspi_prebuild.sh "{ebe_overlays}"
 [Buildroot-copyfiles]
 rootfs.jffs2 = output/images/rootfs.jffs2
 uramdisk = output/images/rootfs.cpio.uboot
