targets: aa1: add sx480-e1 and sx270-e3 chips support

--- a/targets/Mercury_AA1/Mercury_PE1/Rev2/EMMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/Rev2/EMMC/build.ini
@@ -11,3 +11,13 @@ preloader-mkpimage.bin = uboot_w_dtb-mkpimage-emmc.bin
 fpga.rbf = refdes_emmc.rbf
 uboot_ramdisk.scr = emmc_uboot_ramdisk.scr
 uboot.scr = emmc_uboot.scr
+[boot_files_sx480_e1-copyfiles]
+preloader-mkpimage.bin = uboot_w_dtb-mkpimage-emmc.bin
+fpga.rbf = refdes_emmc.rbf
+uboot_ramdisk.scr = emmc_uboot_ramdisk.scr
+uboot.scr = emmc_uboot.scr
+[boot_files_sx270_e3-copyfiles]
+preloader-mkpimage.bin = uboot_w_dtb-mkpimage-emmc.bin
+fpga.rbf = refdes_emmc.rbf
+uboot_ramdisk.scr = emmc_uboot_ramdisk.scr
+uboot.scr = emmc_uboot.scr
