--- a/targets/Mercury_AA1/Mercury_PE1/Rev2/QSPI/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/Rev2/QSPI/build.ini
@@ -17,6 +17,20 @@ uboot_ramdisk.scr = qspi_uboot_ramdisk.scr
 uboot.scr = qspi_uboot.scr
 boot_full.conf = boot_full.conf
 boot_full_ramdisk.conf = boot_full_ramdisk.conf
+[boot_files_sx480_e1-copyfiles]
+preloader-mkpimage.bin = uboot_w_dtb-mkpimage-qspi.bin
+fpga.rbf.img = refdes.rbf.img
+uboot_ramdisk.scr = qspi_uboot_ramdisk.scr
+uboot.scr = qspi_uboot.scr
+boot_full.conf = boot_full.conf
+boot_full_ramdisk.conf = boot_full_ramdisk.conf
+[boot_files_sx270_e3-copyfiles]
+preloader-mkpimage.bin = uboot_w_dtb-mkpimage-qspi.bin
+fpga.rbf.img = refdes.rbf.img
+uboot_ramdisk.scr = qspi_uboot_ramdisk.scr
+uboot.scr = qspi_uboot.scr
+boot_full.conf = boot_full.conf
+boot_full_ramdisk.conf = boot_full_ramdisk.conf
 [bootimage]
 bootimage-full = create-image boot_full.conf boot_full.bin
 bootimage-full-ramdisk = create-image boot_full_ramdisk.conf boot_full_ramdisk.bin
