--- a/targets/Mercury_AA1/Mercury_PE1/Rev2/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/Rev2/build.ini
@@ -3,6 +3,8 @@ defconfig = make enclustra_altera_uart1_defconfig
 [binaries]
 boot_files_sx480_i2 = true
 boot_files_sx270_i2 = false
+boot_files_sx480_e1 = false
+boot_files_sx270_e3 = false
 [boot_files_sx480_i2]
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_pe1_sx480_i2.zip
@@ -11,3 +13,11 @@ description = Altera Arria 10 SX480, speed grade I2
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_pe1_sx270_i2.zip
 description = Altera Arria 10 SX270, speed grade I2
+[boot_files_sx480_e1]
+unpack = true
+url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_pe1_sx480_e1.zip
+description = Altera Arria 10 SX480, speed grade E1
+[boot_files_sx270_e3]
+unpack = true
+url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_pe1_sx270_e3.zip
+description = Altera Arria 10 SX270, speed grade E3
