--- a/targets/Mercury_AA1/Mercury_PE1/Rev2/MMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/Rev2/MMC/build.ini
@@ -11,3 +11,13 @@ preloader-mkpimage.bin = uboot_w_dtb-mkpimage-mmc.bin
 fpga.rbf = refdes.rbf
 uboot_ramdisk.scr = mmc_uboot_ramdisk.scr
 uboot.scr = mmc_uboot.scr
+[boot_files_sx480_e1-copyfiles]
+preloader-mkpimage.bin = uboot_w_dtb-mkpimage-mmc.bin
+fpga.rbf = refdes.rbf
+uboot_ramdisk.scr = mmc_uboot_ramdisk.scr
+uboot.scr = mmc_uboot.scr
+[boot_files_sx270_e3-copyfiles]
+preloader-mkpimage.bin = uboot_w_dtb-mkpimage-mmc.bin
+fpga.rbf = refdes.rbf
+uboot_ramdisk.scr = mmc_uboot_ramdisk.scr
+uboot.scr = mmc_uboot.scr
