--- a/targets/Mars_MA3/Mars_PM3/QSPI/build.ini
+++ b/targets/Mars_MA3/Mars_PM3/QSPI/build.ini
@@ -1,6 +1,11 @@
+[U-Boot-parallelbuild]
+defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- enclustra_ebe_generated_defconfig
 [U-Boot-build]
+generate_defconfig = cat configs/socfpga_cyclone5_mars_ma3_defconfig configs/socfpga_env_on_qspi.appendix > configs/enclustra_ebe_generated_defconfig
 bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot qspi start script" -d additional_bootscripts/ma3-qspiboot additional_bootscripts/uboot.scr
 bootscript_ramdisk = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot qspi start script" -d additional_bootscripts/ma3-qspiramdiskboot additional_bootscripts/uboot_ramdisk.scr
+[U-Boot-options]
+build_order = generate_defconfig,defconfig,elf,bootscript,bootscript_ramdisk
 [U-Boot-copyfiles]
 uboot.scr = additional_bootscripts/uboot.scr
 uboot_ramdisk.scr = additional_bootscripts/uboot_ramdisk.scr
