--- a/targets/Mercury_SA1/Mercury_PE1/Rev3/MMC/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/Rev3/MMC/build.ini
@@ -3,7 +3,7 @@ defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- enclustra_ebe_ge
 [U-Boot-build]
 generate_defconfig = cat configs/socfpga_cyclone5_mercury_sa1_rev3_defconfig configs/socfpga_env_on_sd.appendix > configs/enclustra_ebe_generated_defconfig
 bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d additional_bootscripts/mmcboot additional_bootscripts/uboot.scr
-bootscript_ramdisk = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d additional_bootscripts/mmcboot-ramdisk additional_bootscripts/uboot_ramdisk.scr
+bootscript_ramdisk = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc ramdisk start script" -d additional_bootscripts/mmcboot-ramdisk additional_bootscripts/uboot_ramdisk.scr
 [U-Boot-options]
 build_order = generate_defconfig,defconfig,elf,bootscript,bootscript_ramdisk
 [U-Boot-copyfiles]
