--- a/targets/Mercury_AA1/Mercury_PE1/EMMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/EMMC/build.ini
@@ -1,17 +1,35 @@
+[U-Boot-parallelbuild]
+defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- enclustra_ebe_generated_defconfig
+
+[U-Boot-build]
+generate_defconfig = cat configs/socfpga_cyclone5_mercury_sa1_rev3_defconfig configs/socfpga_env_on_sd.appendix > configs/enclustra_ebe_generated_defconfig
+bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d additional_bootscripts/mmcboot additional_bootscripts/uboot.scr
+bootscript_ramdisk = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc ramdisk start script" -d additional_bootscripts/mmcboot-ramdisk additional_bootscripts/uboot_ramdisk.scr
+
+[U-Boot-options]
+build_order = generate_defconfig,defconfig,elf,bootscript,bootscript_ramdisk
+
+[U-Boot-copyfiles]
+uboot.scr = additional_bootscripts/uboot.scr
+uboot_ramdisk.scr = additional_bootscripts/uboot_ramdisk.scr
+
 [Buildroot-copyfiles]
 rootfs.tar = output/images/rootfs.tar
 uramdisk = output/images/rootfs.cpio.uboot
-[boot_files_sx480_i2-copyfiles]
+
+[boot_files_ME-AA1-480-2I3-D12E-NFX3-copyfiles]
 preloader-mkpimage.bin = uboot_w_dtb-mkpimage-emmc.bin
 fpga.rbf = refdes_emmc.rbf
 uboot_ramdisk.scr = emmc_uboot_ramdisk.scr
 uboot.scr = emmc_uboot.scr
-[boot_files_sx270_i2-copyfiles]
+
+[boot_files_ME-AA1-270-2I2-D11E-NFX3-copyfiles]
 preloader-mkpimage.bin = uboot_w_dtb-mkpimage-emmc.bin
 fpga.rbf = refdes_emmc.rbf
 uboot_ramdisk.scr = emmc_uboot_ramdisk.scr
 uboot.scr = emmc_uboot.scr
-[boot_files_sx270_e3-copyfiles]
+
+[boot_files_ME-AA1-270-3E4-D11E-NFX3-copyfiles]
 preloader-mkpimage.bin = uboot_w_dtb-mkpimage-emmc.bin
 fpga.rbf = refdes_emmc.rbf
 uboot_ramdisk.scr = emmc_uboot_ramdisk.scr
