--- a/targets/Mercury_AA1/Mercury_PE1/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/build.ini
@@ -1,18 +1,47 @@
+[U-Boot-parallelbuild]
+defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- enclustra_ebe_generated_defconfig
+
+[U-Boot-build]
+generate_defconfig = cat configs/socfpga_cyclone5_mercury_sa1_rev3_defconfig configs/socfpga_env_on_sd.appendix > configs/enclustra_ebe_generated_defconfig
+bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d additional_bootscripts/mmcboot additional_bootscripts/uboot.scr
+bootscript_ramdisk = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc ramdisk start script" -d additional_bootscripts/mmcboot-ramdisk additional_bootscripts/uboot_ramdisk.scr
+
+[U-Boot-options]
+build_order = generate_defconfig,defconfig,elf,bootscript,bootscript_ramdisk
+
+[U-Boot-copyfiles]
+uboot.scr = additional_bootscripts/uboot.scr
+uboot_ramdisk.scr = additional_bootscripts/uboot_ramdisk.scr
+
 [Buildroot-parallelbuild]
 defconfig = make enclustra_altera_uart1_defconfig
+
+[Linux-device-tree]
+path = arch/arm/boot/dts/xilinx
+baseboard = socfpga_enclustra_mercury_pe1.dtsi
+qspi = socfpga_enclustra_qspi.dtsi
+
+[U-Boot-device-tree]
+path = arch/arm/dts
+basboard = socfpga_enclustra_mercury_pe1.dtsi
+qspi = socfpga_enclustra_qspi.dtsi
+
 [binaries]
-boot_files_sx480_i2 = true
-boot_files_sx270_i2 = false
-boot_files_sx270_e3 = false
-[boot_files_sx480_i2]
+boot_files_ME-AA1-480-2I3-D12E-NFX3 = true
+boot_files_ME-AA1-270-2I2-D11E-NFX3 = false
+boot_files_ME-AA1-270-3E4-D11E-NFX3 = false
+
+[boot_files_ME-AA1-480-2I3-D12E-NFX3]
 unpack = true
-url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_pe1_sx480_i2.zip
+url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/ME-AA1-480-2I3-D12E-NFX3.zip
 description = Altera Arria 10 SX480, speed grade I2
-[boot_files_sx270_i2]
+
+[boot_files_ME-AA1-270-2I2-D11E-NFX3]
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_pe1_sx270_i2.zip
 description = Altera Arria 10 SX270, speed grade I2
-[boot_files_sx270_e3]
+
+[boot_files_ME-AA1-270-3E4-D11E-NFX3]
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_pe1_sx270_e3.zip
 description = Altera Arria 10 SX270, speed grade E3
