--- a/targets/Mercury_AA1/Mercury_ST1/build.ini
+++ b/targets/Mercury_AA1/Mercury_ST1/build.ini
@@ -1,18 +1,22 @@
 [Buildroot-parallelbuild]
 defconfig = make enclustra_altera_uart1_defconfig
+
 [binaries]
-boot_files_sx480_i2 = true
-boot_files_sx270_i2 = false
-boot_files_sx270_e3 = false
-[boot_files_sx480_i2]
+boot_files_ME-AA1-480-2I3-D12E-NFX3 = true
+boot_files_ME-AA1-270-2I2-D11E-NFX3 = false
+boot_files_ME-AA1-270-3E4-D11E-NFX3 = false
+
+[boot_files_ME-AA1-480-2I3-D12E-NFX3]
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_pe1_sx480_i2.zip
 description = Altera Arria 10 SX480, speed grade I2
-[boot_files_sx270_i2]
+
+[boot_files_ME-AA1-270-2I2-D11E-NFX3]
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_pe1_sx270_i2.zip
 description = Altera Arria 10 SX270, speed grade I2
-[boot_files_sx270_e3]
+
+[boot_files_ME-AA1-270-3E4-D11E-NFX3]
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_aa1_pe1_sx270_e3.zip
 description = Altera Arria 10 SX270, speed grade E3
