--- a/targets/Mercury_SA1/Mercury_ST1/build.ini
+++ b/targets/Mercury_SA1/Mercury_ST1/build.ini
@@ -1,8 +1,10 @@
 [binaries]
-boot_files_c6_i7 = true
-[boot_files_c6_i7]
+boot_files_ME-SA1-C6-7I-D10 = true
+
+[boot_files_ME-SA1-C6-7I-D10]
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_sa1_pe1_c6_i7.zip
 description = Altera SocFPGA C6, speed grade I7
+
 [U-Boot-copyfiles]
 uEnv.txt = board/enclustra/uEnv.txt
