--- a/targets/Mercury_SA2/Mercury_PE3/build.ini
+++ b/targets/Mercury_SA2/Mercury_PE3/build.ini
@@ -1,6 +1,7 @@
 [binaries]
-boot_files_d6_i7 = true
-[boot_files_d6_i7]
+boot_files_ME-SA2-D6-7I-D11 = true
+
+[boot_files_ME-SA2-D6-7I-D11]
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_sa2_pe1_d6_i7.zip
 description = Altera SocFPGA D6, speed grade I7
