--- a/targets/Mercury_AA1/Mercury_PE3/MMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE3/MMC/build.ini
@@ -2,6 +2,9 @@
 rootfs.tar = output/images/rootfs.tar
 uramdisk = output/images/rootfs.cpio.uboot
 
+[U-Boot-device-tree]
+common = socfpga_enclustra_mercury_aa1_mmc_boot.dtsi
+
 [boot_files_ME-AA1-480-2I3-D12E-NFX3-copyfiles]
 preloader-mkpimage.bin = uboot_w_dtb-mkpimage-mmc.bin
 fpga.rbf = refdes.rbf
