--- a/targets/Mercury_AA1/build.ini
+++ b/targets/Mercury_AA1/build.ini
@@ -1,2 +1,34 @@
 [Linux-copyfiles]
 devicetree.dtb = arch/arm/boot/dts/enclustra_generated.dtb
+
+[Linux-device-tree]
+path = arch/arm/boot/dts
+soc = socfpga_arria10.dtsi
+common = socfpga_enclustra_mercury_aa1.dtsi
+
+[U-Boot-device-tree]
+path = arch/arm/dts
+soc = socfpga_arria10.dtsi
+soc-uboot = socfpga_arria10-u-boot.dtsi
+soc-handoff-header = socfpga_arria10_handoff.h
+soc-handoff = socfpga_arria10-handoff.dtsi
+soc-handoff-uboot = socfpga_arria10_handoff_u-boot.dtsi
+common = socfpga_enclustra_mercury_aa1.dtsi
+
+[boot_files_ME-AA1-480-2I3-D12E-NFX3-Linux-device-tree]
+module = ME-AA1-480-2I3-D12E-NFX3.dtsi
+
+[boot_files_ME-AA1-480-2I3-D12E-NFX3-U-Boot-device-tree]
+module = ME-AA1-480-2I3-D12E-NFX3.dtsi
+
+[boot_files_ME-AA1-270-2I2-D11E-NFX3-Linux-device-tree]
+module = ME-AA1-270-2I2-D11E-NFX3.dtsi
+
+[boot_files_ME-AA1-270-2I2-D11E-NFX3-U-Boot-device-tree]
+module = ME-AA1-270-2I2-D11E-NFX3.dtsi
+
+[boot_files_ME-AA1-270-3E4-D11E-NFX3-Linux-device-tree]
+module = ME-AA1-270-3E4-D11E-NFX3.dtsi
+
+[boot_files_ME-AA1-270-3E4-D11E-NFX3-U-Boot-device-tree]
+module = ME-AA1-270-3E4-D11E-NFX3.dtsi
