--- a/targets/Mercury_SA1/build.ini
+++ b/targets/Mercury_SA1/build.ini
@@ -1,2 +1,19 @@
 [Linux-copyfiles]
 devicetree.dtb = arch/arm/boot/dts/enclustra_generated.dtb
+
+[Linux-device-tree]
+path = arch/arm/boot/dts
+soc = socfpga_cyclone5.dtsi
+common = socfpga_enclustra_mercury_sa1.dtsi
+
+[U-Boot-device-tree]
+path = arch/arm/dts
+soc = socfpga_cyclone5.dtsi
+soc-uboot = socfpga-common-u-boot.dtsi
+common = socfpga_enclustra_mercury_sa1.dtsi
+
+[boot_files_ME-SA1-C6-7I-D10-Linux-device-tree]
+module = ME-SA1-C6-7I-D10.dtsi
+
+[boot_files_ME-SA1-C6-7I-D10-U-Boot-device-tree]
+module = ME-SA1-C6-7I-D10.dtsi
