--- a/targets/Mercury_SA2/build.ini
+++ b/targets/Mercury_SA2/build.ini
@@ -1,2 +1,19 @@
 [Linux-copyfiles]
 devicetree.dtb = arch/arm/boot/dts/enclustra_generated.dtb
+
+[Linux-device-tree]
+path = arch/arm/boot/dts
+soc = socfpga_cyclone5.dtsi
+common = socfpga_enclustra_mercury_sa2.dtsi
+
+[U-Boot-device-tree]
+path = arch/arm/dts
+soc = socfpga_cyclone5.dtsi
+soc-uboot = socfpga-common-u-boot.dtsi
+common = socfpga_enclustra_mercury_sa2.dtsi
+
+[boot_files_ME-SA2-D6-7I-D11-Linux-device-tree]
+module = ME-SA2-D6-7I-D11.dtsi
+
+[boot_files_ME-SA2-D6-7I-D11-U-Boot-device-tree]
+module = ME-SA2-D6-7I-D11.dtsi
