--- a/targets/Mercury_AA1/Mercury_PE1/EMMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/EMMC/build.ini
@@ -1,6 +1,9 @@
 [U-Boot-parallelbuild]
 defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- enclustra_ebe_generated_defconfig
 
+[U-Boot-device-tree]
+common = socfpga_enclustra_mercury_aa1_mmc_boot.dtsi
+
 [U-Boot-build]
 generate_defconfig = cat configs/socfpga_cyclone5_mercury_sa1_rev3_defconfig configs/socfpga_env_on_sd.appendix > configs/enclustra_ebe_generated_defconfig
 bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d additional_bootscripts/mmcboot additional_bootscripts/uboot.scr
