--- a/targets/Mercury_AA1/Mercury_PE3/QSPI/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE3/QSPI/build.ini
@@ -1,6 +1,9 @@
 [Buildroot-scripts]
 prebuild = ../../qspi_prebuild.sh "{ebe_overlays}"
 
+[U-Boot-device-tree]
+common = socfpga_enclustra_mercury_aa1_qspi_boot.dtsi
+
 [Buildroot-copyfiles]
 rootfs.jffs2 = output/images/rootfs.jffs2
 uramdisk = output/images/rootfs.cpio.uboot
