--- a/targets/Mercury_SA1/Mercury_PE1/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/build.ini
@@ -1,6 +1,12 @@
 [binaries]
 boot_files_ME-SA1-C6-7I-D10 = true
 
+[Linux-device-tree]
+baseboard = socfpga_enclustra_mercury_pe1.dtsi
+
+[U-Boot-device-tree]
+basboard = socfpga_enclustra_mercury_pe1.dtsi
+
 [boot_files_ME-SA1-C6-7I-D10]
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_sa1_pe1_c6_i7.zip
