Build targets updated

--- a/targets/Mercury_AA1/Mercury_PE3/MMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE3/MMC/build.ini
@@ -1,24 +1,34 @@
-[Buildroot-copyfiles]
-rootfs.tar = output/images/rootfs.tar
-uramdisk = output/images/rootfs.cpio.uboot
+[U-Boot-parallelbuild]
+defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- enclustra_ebe_generated_defconfig
 
 [U-Boot-device-tree]
 common = socfpga_enclustra_mercury_aa1_mmc_boot.dtsi
 
+[U-Boot-build]
+generate_defconfig = cat configs/socfpga_mercury_aa1_defconfig configs/socfpga_env_on_sd.appendix > configs/enclustra_ebe_generated_defconfig
+bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d additional_bootscripts/mmcboot additional_bootscripts/uboot.scr
+
+[U-Boot-options]
+build_order = generate_defconfig,defconfig,elf,bootscript
+
+[U-Boot-copyfiles]
+uboot.scr = additional_bootscripts/uboot.scr
+
+[Buildroot-copyfiles]
+rootfs.tar = output/images/rootfs.tar
+uramdisk = output/images/rootfs.cpio.uboot
+
 [boot_files_ME-AA1-480-2I3-D12E-NFX3-copyfiles]
 preloader-mkpimage.bin = uboot_w_dtb-mkpimage-mmc.bin
 fpga.rbf = refdes.rbf
-uboot_ramdisk.scr = mmc_uboot_ramdisk.scr
 uboot.scr = mmc_uboot.scr
 
 [boot_files_ME-AA1-270-2I2-D11E-NFX3-copyfiles]
 preloader-mkpimage.bin = uboot_w_dtb-mkpimage-mmc.bin
 fpga.rbf = refdes.rbf
-uboot_ramdisk.scr = mmc_uboot_ramdisk.scr
 uboot.scr = mmc_uboot.scr
 
 [boot_files_ME-AA1-270-3E4-D11E-NFX3-copyfiles]
 preloader-mkpimage.bin = uboot_w_dtb-mkpimage-mmc.bin
 fpga.rbf = refdes.rbf
-uboot_ramdisk.scr = mmc_uboot_ramdisk.scr
 uboot.scr = mmc_uboot.scr
