--- a/targets/Mercury_AA1/Mercury_PE1/QSPI/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/QSPI/build.ini
@@ -1,5 +1,15 @@
-[Buildroot-scripts]
-prebuild = ../../qspi_prebuild.sh "{ebe_overlays}"
+[U-Boot-parallelbuild]
+defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- enclustra_ebe_generated_defconfig
+
+[U-Boot-build]
+generate_defconfig = cat configs/socfpga_mercury_aa1_defconfig configs/socfpga_env_on_sd.appendix > configs/enclustra_ebe_generated_defconfig
+bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d additional_bootscripts/mmcboot additional_bootscripts/uboot.scr
+
+[U-Boot-options]
+build_order = generate_defconfig,defconfig,elf,bootscript
+
+[U-Boot-copyfiles]
+uboot.scr = additional_bootscripts/uboot.scr
 
 [U-Boot-device-tree]
 common = socfpga_enclustra_mercury_aa1_qspi_boot.dtsi
@@ -11,17 +21,14 @@ uramdisk = output/images/rootfs.cpio.uboot
 [boot_files_ME-AA1-480-2I3-D12E-NFX3-copyfiles]
 preloader-mkpimage.bin = uboot_w_dtb-mkpimage-qspi.bin
 fpga.rbf.img = refdes.rbf.img
-uboot_ramdisk.scr = qspi_uboot_ramdisk.scr
 uboot.scr = qspi_uboot.scr
 
 [boot_files_ME-AA1-270-2I2-D11E-NFX3-copyfiles]
 preloader-mkpimage.bin = uboot_w_dtb-mkpimage-qspi.bin
 fpga.rbf.img = refdes.rbf.img
-uboot_ramdisk.scr = qspi_uboot_ramdisk.scr
 uboot.scr = qspi_uboot.scr
 
 [boot_files_ME-AA1-270-3E4-D11E-NFX3-copyfiles]
 preloader-mkpimage.bin = uboot_w_dtb-mkpimage-qspi.bin
 fpga.rbf.img = refdes.rbf.img
-uboot_ramdisk.scr = qspi_uboot_ramdisk.scr
 uboot.scr = qspi_uboot.scr
