--- a/targets/Mercury_SA1/Mercury_PE3/MMC/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE3/MMC/build.ini
@@ -2,16 +2,14 @@
 defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- enclustra_ebe_generated_defconfig
 
 [U-Boot-build]
-generate_defconfig = cat configs/socfpga_cyclone5_mercury_sa1_rev3_defconfig configs/socfpga_env_on_sd.appendix > configs/enclustra_ebe_generated_defconfig
+generate_defconfig = cat configs/socfpga_mercury_sa1_defconfig configs/socfpga_env_on_sd.appendix > configs/enclustra_ebe_generated_defconfig
 bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d additional_bootscripts/mmcboot additional_bootscripts/uboot.scr
-bootscript_ramdisk = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc ramdisk start script" -d additional_bootscripts/mmcboot-ramdisk additional_bootscripts/uboot_ramdisk.scr
 
 [U-Boot-options]
-build_order = generate_defconfig,defconfig,elf,bootscript,bootscript_ramdisk
+build_order = generate_defconfig,defconfig,elf,bootscript
 
 [U-Boot-copyfiles]
 uboot.scr = additional_bootscripts/uboot.scr
-uboot_ramdisk.scr = additional_bootscripts/uboot_ramdisk.scr
 
 [Buildroot-copyfiles]
 rootfs.tar = output/images/rootfs.tar
