--- a/targets/Mercury_AA1/Mercury_ST1/QSPI/build.ini
+++ b/targets/Mercury_AA1/Mercury_ST1/QSPI/build.ini
@@ -2,33 +2,33 @@
 defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- enclustra_ebe_generated_defconfig
 
 [U-Boot-build]
-generate_defconfig = cat configs/socfpga_mercury_aa1_defconfig configs/socfpga_env_on_sd.appendix > configs/enclustra_ebe_generated_defconfig
+bsp-generator = arch/arm/mach-socfpga/qts-filter-a10.sh ${OUTDIR}/handoff/hps.xml arch/arm/dts/socfpga_arria10_handoff.h
+generate_defconfig = cat configs/socfpga_mercury_aa1_defconfig configs/socfpga_env_on_qspi.appendix > configs/enclustra_ebe_generated_defconfig
 bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d additional_bootscripts/mmcboot additional_bootscripts/uboot.scr
 
 [U-Boot-options]
-build_order = generate_defconfig,defconfig,elf,bootscript
+build_order = generate_defconfig,defconfig,bsp-generator,elf,bootscript
 
 [U-Boot-copyfiles]
-uboot.scr = additional_bootscripts/uboot.scr
+boot.scr = additional_bootscripts/uboot.scr
 
 [U-Boot-device-tree]
-common = socfpga_enclustra_mercury_aa1_qspi_boot.dtsi
+boot = socfpga_enclustra_mercury_aa1_qspi_boot.dtsi
 
 [Buildroot-copyfiles]
-rootfs.jffs2 = output/images/rootfs.jffs2
 uramdisk = output/images/rootfs.cpio.uboot
 
 [boot_files_ME-AA1-480-2I3-D12E-NFX3-copyfiles]
-preloader-mkpimage.bin = uboot_w_dtb-mkpimage-qspi.bin
-fpga.rbf.img = refdes.rbf.img
-uboot.scr = qspi_uboot.scr
+bitstream-periph.rbf = ME-AA1-480-2I3-D12E-NFX3/qspi/Mercury_AA1_ST1.periph.rbf
+bitstream-core.rbf = ME-AA1-480-2I3-D12E-NFX3/qspi/Mercury_AA1_ST1.core.rbf
+handoff = ME-AA1-480-2I3-D12E-NFX3/qspi/hps_isw_handoff
 
-[boot_files_ME-AA1-270-2I2-D11E-NFX3]
-preloader-mkpimage.bin = uboot_w_dtb-mkpimage-qspi.bin
-fpga.rbf.img = refdes.rbf.img
-uboot.scr = qspi_uboot.scr
+[boot_files_ME-AA1-270-2I2-D11E-NFX3-copyfiles]
+bitstream-periph.rbf = ME-AA1-480-2I3-D12E-NFX3/qspi/Mercury_AA1_ST1.periph.rbf
+bitstream-core.rbf = ME-AA1-480-2I3-D12E-NFX3/qspi/Mercury_AA1_ST1.core.rbf
+handoff = ME-AA1-480-2I3-D12E-NFX3/qspi/hps_isw_handoff
 
 [boot_files_ME-AA1-270-3E4-D11E-NFX3-copyfiles]
-preloader-mkpimage.bin = uboot_w_dtb-mkpimage-qspi.bin
-fpga.rbf.img = refdes.rbf.img
-uboot.scr = qspi_uboot.scr
+bitstream-periph.rbf = ME-AA1-480-2I3-D12E-NFX3/qspi/Mercury_AA1_ST1.periph.rbf
+bitstream-core.rbf = ME-AA1-480-2I3-D12E-NFX3/qspi/Mercury_AA1_ST1.core.rbf
+handoff = ME-AA1-480-2I3-D12E-NFX3/qspi/hps_isw_handoff
