--- a/targets/Mercury_AA1/build.ini
+++ b/targets/Mercury_AA1/build.ini
@@ -6,6 +6,9 @@ path = arch/arm/boot/dts
 soc = socfpga_arria10.dtsi
 common = socfpga_enclustra_mercury_aa1.dtsi
 
+[U-Boot-copyfiles]
+bitstream.its = board/enclustra/mercury_aa1/bitstream.its
+
 [U-Boot-device-tree]
 path = arch/arm/dts
 soc = socfpga_arria10.dtsi
@@ -14,6 +17,9 @@ soc-handoff-header = socfpga_arria10_handoff.h
 soc-handoff = socfpga_arria10-handoff.dtsi
 soc-handoff-uboot = socfpga_arria10_handoff_u-boot.dtsi
 common = socfpga_enclustra_mercury_aa1.dtsi
+
+[bootimage]
+bitstream = mkimage -E -f bitstream.its bitstream.itb
 
 [boot_files_ME-AA1-480-2I3-D12E-NFX3-Linux-device-tree]
 module = ME-AA1-480-2I3-D12E-NFX3.dtsi
