--- a/targets/Mercury_SA2/Mercury_PE1/MMC/build.ini
+++ b/targets/Mercury_SA2/Mercury_PE1/MMC/build.ini
@@ -2,14 +2,14 @@
 defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- enclustra_ebe_generated_defconfig
 
 [U-Boot-build]
-generate_defconfig = cat configs/socfpga_mercury_sa2_defconfig configs/socfpga_env_on_sd.appendix > configs/enclustra_ebe_generated_defconfig
+generate_defconfig = cat configs/socfpga_mercury_sa2_defconfig configs/socfpga_env_on_mmc.appendix > configs/enclustra_ebe_generated_defconfig
 bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d additional_bootscripts/mmcboot additional_bootscripts/uboot.scr
 
 [U-Boot-options]
 build_order = generate_defconfig,defconfig,elf,bootscript
 
 [U-Boot-copyfiles]
-uboot.scr = additional_bootscripts/uboot.scr
+boot.scr = additional_bootscripts/uboot.scr
 
 [Buildroot-copyfiles]
 rootfs.tar = output/images/rootfs.tar
