--- a/targets/Mercury_SA2/Mercury_ST1/QSPI/build.ini
+++ b/targets/Mercury_SA2/Mercury_ST1/QSPI/build.ini
@@ -9,7 +9,7 @@ bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot qspi 
 build_order = generate_defconfig,defconfig,elf,bootscript
 
 [U-Boot-copyfiles]
-uboot.scr = additional_bootscripts/uboot.scr
+boot.scr = additional_bootscripts/uboot.scr
 
 [Buildroot-copyfiles]
 rootfs.jffs2 = output/images/rootfs.jffs2
