Add temporary download paths for AA1 PE1 / fix boot script build

--- a/targets/Mercury_AA1/Mercury_PE1/QSPI/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/QSPI/build.ini
@@ -4,13 +4,13 @@ defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- enclustra_ebe_ge
 [U-Boot-build]
 bsp-generator = arch/arm/mach-socfpga/qts-filter-a10.sh ${OUTDIR}/handoff/hps.xml arch/arm/dts/socfpga_arria10_handoff.h
 generate_defconfig = cat configs/socfpga_mercury_aa1_defconfig configs/socfpga_env_on_qspi.appendix > configs/enclustra_ebe_generated_defconfig
-bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d additional_bootscripts/mmcboot additional_bootscripts/uboot.scr
+bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot qspi start script" -d board/enclustra/bootscripts/qspi.cmd boot.scr
 
 [U-Boot-options]
 build_order = generate_defconfig,defconfig,bsp-generator,elf,bootscript
 
 [U-Boot-copyfiles]
-boot.scr = additional_bootscripts/uboot.scr
+boot.scr = boot.scr
 
 [U-Boot-device-tree]
 boot = socfpga_enclustra_mercury_aa1_qspi_boot.dtsi
@@ -19,16 +19,16 @@ boot = socfpga_enclustra_mercury_aa1_qspi_boot.dtsi
 uramdisk = output/images/rootfs.cpio.uboot
 
 [boot_files_ME-AA1-480-2I3-D12E-NFX3-copyfiles]
-bitstream-periph.rbf = ME-AA1-480-2I3-D12E-NFX3/qspi/Mercury_AA1_PE1.periph.rbf
-bitstream-core.rbf = ME-AA1-480-2I3-D12E-NFX3/qspi/Mercury_AA1_PE1.core.rbf
-handoff = ME-AA1-480-2I3-D12E-NFX3/qspi/hps_isw_handoff
+bitstream-periph.rbf = qspi/Mercury_AA1_PE1.periph.rbf
+bitstream-core.rbf = qspi/Mercury_AA1_PE1.core.rbf
+handoff = qspi/hps_isw_handoff
 
 [boot_files_ME-AA1-270-2I2-D11E-NFX3-copyfiles]
-bitstream-periph.rbf = ME-AA1-480-2I3-D12E-NFX3/qspi/Mercury_AA1_PE1.periph.rbf
-bitstream-core.rbf = ME-AA1-480-2I3-D12E-NFX3/qspi/Mercury_AA1_PE1.core.rbf
-handoff = ME-AA1-480-2I3-D12E-NFX3/qspi/hps_isw_handoff
+bitstream-periph.rbf = qspi/Mercury_AA1_PE1.periph.rbf
+bitstream-core.rbf = qspi/Mercury_AA1_PE1.core.rbf
+handoff = qspi/hps_isw_handoff
 
 [boot_files_ME-AA1-270-3E4-D11E-NFX3-copyfiles]
-bitstream-periph.rbf = ME-AA1-480-2I3-D12E-NFX3/qspi/Mercury_AA1_PE1.periph.rbf
-bitstream-core.rbf = ME-AA1-480-2I3-D12E-NFX3/qspi/Mercury_AA1_PE1.core.rbf
-handoff = ME-AA1-480-2I3-D12E-NFX3/qspi/hps_isw_handoff
+bitstream-periph.rbf = qspi/Mercury_AA1_PE1.periph.rbf
+bitstream-core.rbf = qspi/Mercury_AA1_PE1.core.rbf
+handoff = qspi/hps_isw_handoff
