Use modul names as description in gui

--- a/targets/Mercury_SA1/Mercury_PE3/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE3/build.ini
@@ -10,7 +10,7 @@ basboard = socfpga_enclustra_mercury_pe3.dtsi
 [boot_files_ME-SA1-C6-7I-D10]
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_sa1_pe1_c6_i7.zip
-description = Altera SocFPGA C6, speed grade I7
+description = ME-SA1-C6-7I-D10
 
 [U-Boot-copyfiles]
 uEnv.txt = board/enclustra/uEnv.txt
