--- a/targets/Mercury_SA2/Mercury_PE1/build.ini
+++ b/targets/Mercury_SA2/Mercury_PE1/build.ini
@@ -10,4 +10,4 @@ basboard = socfpga_enclustra_mercury_pe1.dtsi
 [boot_files_ME-SA2-D6-7I-D11]
 unpack = true
 url = http://www.enclustra.com/binaries/enclustra-bsp/{ebe_release}/refdes/mercury_sa2_pe1_d6_i7.zip
-description = Altera SocFPGA D6, speed grade I7
+description = ME-SA2-D6-7I-D11
