Config files updated

--- a/targets/Mercury_SA1/Mercury_PE3/EMMC/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE3/EMMC/build.ini
@@ -3,18 +3,17 @@ defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- enclustra_ebe_ge
 
 [U-Boot-build]
 generate_defconfig = cat configs/socfpga_mercury_sa1_defconfig configs/socfpga_env_on_mmc.appendix > configs/enclustra_ebe_generated_defconfig
-bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot emmc start script" -d additional_bootscripts/mmcboot additional_bootscripts/uboot.scr
+bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d board/enclustra/bootscripts/sd.cmd boot.scr
 
 [U-Boot-options]
 build_order = generate_defconfig,defconfig,elf,bootscript
 
 [U-Boot-copyfiles]
-boot.scr = additional_bootscripts/uboot.scr
+boot.scr = uboot.scr
 
 [Buildroot-copyfiles]
 rootfs.tar = output/images/rootfs.tar
-uramdisk = output/images/rootfs.cpio.uboot
 
 [boot_files_ME-SA1-C6-7I-D10-copyfiles]
-preloader-mkpimage.bin = preloader-mkpimage-sdcard.bin
-fpga.rbf = refdes.rbf
+fpga.rbf = emmc/Mercury_SA1_PE3.rbf
+handoff = emmc/hps_isw_handoff
