--- a/targets/Mercury_SA1/Mercury_ST1/QSPI/build.ini
+++ b/targets/Mercury_SA1/Mercury_ST1/QSPI/build.ini
@@ -3,18 +3,17 @@ defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- enclustra_ebe_ge
 
 [U-Boot-build]
 generate_defconfig = cat configs/socfpga_mercury_sa1_defconfig configs/socfpga_env_on_qspi.appendix > configs/enclustra_ebe_generated_defconfig
-bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot qspi start script" -d additional_bootscripts/ma3-qspiboot additional_bootscripts/uboot.scr
+bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d board/enclustra/bootscripts/qspi.cmd boot.scr
 
 [U-Boot-options]
 build_order = generate_defconfig,defconfig,elf,bootscript
 
 [U-Boot-copyfiles]
-boot.scr = additional_bootscripts/uboot.scr
+boot.scr = uboot.scr
 
 [Buildroot-copyfiles]
-rootfs.jffs2 = output/images/rootfs.jffs2
 uramdisk = output/images/rootfs.cpio.uboot
 
 [boot_files_ME-SA1-C6-7I-D10-copyfiles]
-preloader-mkpimage.bin = preloader-mkpimage-qspi.bin
-fpga.rbf.img = refdes.rbf.img
+fpga.rbf = qspi/Mercury_SA1_ST1.rbf
+handoff = qspi/hps_isw_handoff
