--- a/targets/Mercury_AA1/build.ini
+++ b/targets/Mercury_AA1/build.ini
@@ -1,3 +1,6 @@
+[Buildroot-parallelbuild]
+defconfig = make enclustra_altera_uart1_defconfig
+
 [Linux-copyfiles]
 devicetree.dtb = arch/arm/boot/dts/enclustra_generated.dtb
 
