--- a/targets/Mercury_SA1/Mercury_ST1/MMC/build.ini
+++ b/targets/Mercury_SA1/Mercury_ST1/MMC/build.ini
@@ -7,10 +7,10 @@ generate_defconfig = cat configs/socfpga_mercury_sa1_defconfig configs/socfpga_e
 bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc start script" -d board/enclustra/bootscripts/sd.cmd boot.scr
 
 [U-Boot-options]
-build_order = generate_defconfig,defconfig,elf,bootscript
+build_order = generate_defconfig,defconfig,bsp-generator,elf,bootscript
 
 [U-Boot-copyfiles]
-boot.scr = uboot.scr
+boot.scr = boot.scr
 
 [Buildroot-copyfiles]
 rootfs.tar = output/images/rootfs.tar
