Copy u-boot-with-spl.sfp for Cyclone 5 devices

--- a/targets/Mercury_AA1/build.ini
+++ b/targets/Mercury_AA1/build.ini
@@ -11,6 +11,7 @@ common = socfpga_enclustra_mercury_aa1.dtsi
 
 [U-Boot-copyfiles]
 bitstream.its = board/enclustra/mercury_aa1/bitstream.its
+u-boot-splx4.sfp = spl/u-boot-splx4.sfp
 
 [U-Boot-device-tree]
 path = arch/arm/dts
