--- a/targets/Mercury_SA1/build.ini
+++ b/targets/Mercury_SA1/build.ini
@@ -9,6 +9,9 @@ path = arch/arm/boot/dts
 soc = socfpga_cyclone5.dtsi
 common = socfpga_enclustra_mercury_sa1.dtsi
 
+[U-Boot-copyfiles]
+u-boot-with-spl.sfp=u-boot-with-spl.sfp
+
 [U-Boot-device-tree]
 path = arch/arm/dts
 soc = socfpga_cyclone5.dtsi
