Use separate Kernel config for each module

--- a/targets/Mercury_SA2/build.ini
+++ b/targets/Mercury_SA2/build.ini
@@ -1,6 +1,9 @@
 [Buildroot-parallelbuild]
 defconfig = make enclustra_altera_defconfig
 
+[Linux-parallelbuild]
+defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- mercury-sa2_defconfig
+
 [Linux-copyfiles]
 devicetree.dtb = arch/arm/boot/dts/enclustra_generated.dtb
 
