--- a/targets/Mercury_AA1/build.ini
+++ b/targets/Mercury_AA1/build.ini
@@ -1,6 +1,9 @@
 [Buildroot-parallelbuild]
 defconfig = make enclustra_altera_uart1_defconfig
 
+[Linux-parallelbuild]
+defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- mercury-aa1_defconfig
+
 [Linux-copyfiles]
 devicetree.dtb = arch/arm/boot/dts/enclustra_generated.dtb
 
