Copy u-boot.img only for AA1

--- a/targets/Mercury_AA1/build.ini
+++ b/targets/Mercury_AA1/build.ini
@@ -13,6 +13,7 @@ soc = socfpga_arria10.dtsi
 common = socfpga_enclustra_mercury_aa1.dtsi
 
 [U-Boot-copyfiles]
+u-boot.img = u-boot-dtb.img
 bitstream.its = board/enclustra/mercury_aa1/bitstream.its
 u-boot-splx4.sfp = spl/u-boot-splx4.sfp
 
