--- a/targets/Mercury_SA1/Mercury_PE1/QSPI/build.ini
+++ b/targets/Mercury_SA1/Mercury_PE1/QSPI/build.ini
@@ -11,6 +11,8 @@ build_order = generate_defconfig,defconfig,bsp-generator,elf,bootscript
 
 [U-Boot-copyfiles]
 boot.scr = boot.scr
+u-boot-splx4.sfp = spl/u-boot-splx4.sfp
+u-boot.img = u-boot.img
 
 [Buildroot-copyfiles]
 uramdisk = output/images/rootfs.cpio.uboot
