--- a/targets/Mercury_SA1/Mercury_ST1/MMC/build.ini
+++ b/targets/Mercury_SA1/Mercury_ST1/MMC/build.ini
@@ -11,6 +11,7 @@ build_order = generate_defconfig,defconfig,bsp-generator,elf,bootscript
 
 [U-Boot-copyfiles]
 boot.scr = boot.scr
+u-boot-with-spl.sfp=u-boot-with-spl.sfp
 
 [Buildroot-copyfiles]
 rootfs.tar = output/images/rootfs.tar
