Add additional linux dtsi file for AA1 to disable QSPI for MMC boot and MMC for QSPI boot

--- a/targets/Mercury_AA1/Mercury_PE1/EMMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/EMMC/build.ini
@@ -15,6 +15,9 @@ build_order = generate_defconfig,defconfig,bsp-generator,elf,bootscript
 [U-Boot-copyfiles]
 boot.scr = boot.scr
 
+[Linux-device-tree]
+boot = socfpga_enclustra_mercury_aa1_mmc_boot.dtsi
+
 [Buildroot-copyfiles]
 rootfs.tar = output/images/rootfs.tar
 
