--- a/targets/Mercury_AA1/Mercury_PE1/QSPI/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE1/QSPI/build.ini
@@ -15,6 +15,9 @@ build_order = generate_defconfig,defconfig,bsp-generator,elf,bootscript
 [U-Boot-copyfiles]
 boot.scr = boot.scr
 
+[Linux-device-tree]
+boot = socfpga_enclustra_mercury_aa1_qspi_boot.dtsi
+
 [Buildroot-copyfiles]
 uramdisk = output/images/rootfs.cpio.uboot
 
