Fix order of Linux build steps

--- a/targets/build.ini
+++ b/targets/build.ini
@@ -20,6 +20,9 @@ dtb = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- dtbs
 modules = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- modules
 modules_install = make INSTALL_MOD_PATH={ebe_overlays} ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- modules_install
 
+[Linux-options]
+build_order = defconfig,kernel,dtb,modules,modules_install
+
 [Linux-copyfiles]
 uImage = arch/arm/boot/uImage
 configs/kernel_dotconfig = .config
