Fix build order of Buildroot tasks

--- a/targets/build.ini
+++ b/targets/build.ini
@@ -49,6 +49,9 @@ priority = 100
 [Buildroot-parallelbuild]
 rootfs = make EBE_OVERLAYS={ebe_overlays}
 
+[Buildroot-options]
+build_order = defconfig,rootfs
+
 [Buildroot-help]
 description = the Buildroot rootfs.
 
