--- a/targets/Mercury_AA1/build.ini
+++ b/targets/Mercury_AA1/build.ini
@@ -2,7 +2,7 @@
 defconfig = make enclustra_altera_defconfig
 
 [Linux-parallelbuild]
-defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- mercury-aa1_defconfig
+defconfig = make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- socfpga_enclustra_mercury_aa1_defconfig
 
 [Linux-copyfiles]
 devicetree.dtb = arch/arm/boot/dts/enclustra_generated.dtb
