--- a/targets/Mercury_AA1/Mercury_PE3/MMC/build.ini
+++ b/targets/Mercury_AA1/Mercury_PE3/MMC/build.ini
@@ -13,7 +13,7 @@ bootscript = mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Uboot mmc s
 build_order = generate_defconfig,defconfig,bsp-generator,elf,bootscript
 
 [U-Boot-copyfiles]
-boot.scr = uboot.scr
+boot.scr = boot.scr
 
 [Linux-device-tree]
 boot = socfpga_enclustra_mercury_aa1_mmc_boot.dtsi
